Fixed issue of metro menu overflowing over main content on first load before the widget code isfully loaded.

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -111,6 +111,7 @@ body {
             min-height: 180px;
             
             nav.metromenu {
+                height: 185px;
                 min-height: 186px;
                 max-height: 500px;
                 
